@@ -77,12 +77,12 @@ REPOSITORY
     <https://github.com/michal-josef-spacek/Lego-Part>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2013-2015 Michal Špaček
+     © 2013-2015 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
