@@ -1,6 +1,7 @@
 0.04
  - Fix Makefile.PL fails with no '.' in @INC.
  - Update author github username.
+ - Update author name.
  - Update Module::Install to 1.21 version.
 
 0.03 2015-09-23T23:30:47+02:00
